# opti

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
src/: main.py
src/adapter/: __init__.py  auggie_cli.py  base.py  claude.py  claude_cli.py  cli_digest.py  copilot_cli.py  local_llm.py  openai_adapter.py  registry.py
src/constants/: regex.py
src/core/: __init__.py  config.py  event_bus.py  shell.py
src/energy/: __init__.py  acceleration.py  color_overlay.py  colors.py  draggable_widget.py  media_effect.py  media_player.py  star.py
src/llm/: inference.py
src/speech/: asr.py  recognizer.py
src/ui/: __init__.py  ui_bridge.py
src/utils/: app_logger.py  folders.py  text_clean.py  threads.py  utils.example.py  utils.py
src/voice/: __init__.py  voice_io.py
