[project]
name = "opti"
version = "0.1.0"
description = "Voice + Visual Shell for AI Agents"
requires-python = "==3.12.*"

dependencies = [
    "PySide6>=6.9.1",
    "pyttsx3>=2.98",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "requests>=2.32.4",
    "mistune>=3.1.3",
    "beautifulsoup4>=4.13.4",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
cloud = ["anthropic", "openai"]
